Fix CSS of column visibility buttons

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -14,7 +14,7 @@ $gray: #f3f3f4;         // Background wrapper color
 $light-gray: #D1DADE;   // Default label, badge
 $label-badge-color: #5E5E5E;
 $light-blue:#f3f6fb;
-$background-gray: #ffffff;
+$background-gray: #f7f7f7;
 $link-gray: #797979;
 $page-background: #eef3f5;
 
